# ocp_perf_dashboard

backend/: pyproject.toml
backend/app/api/v1/commons/: constants.py  ocp.py  quay.py  utils.py
backend/app/api/v1/endpoints/cpt/: cptJobs.py
backend/app/api/v1/endpoints/ilab/: ilab.py
backend/app/api/v1/endpoints/ocm/: ocmJobs.py
backend/app/api/v1/endpoints/ocp/: ocpJobs.py
backend/app/api/v1/endpoints/quay/: quayJobs.py
backend/app/api/v1/endpoints/telco/: telcoGraphs.py  telcoJobs.py
backend/app/services/: crucible_svc.py  search.py
backend/tests/: fake_elastic.py  test_crucible.py
frontend/src/actions/: ilabActions.js  ocpActions.js  quayActions.js
frontend/src/components/templates/ILab/: IlabCompareComponent.jsx  index.jsx
frontend/src/reducers/: homeReducer.js
